# test-mingw-dxlib-sol-cpp

./: CMakeLists.txt  GAMELOG.TXT  Log.txt  run.bat
script/: danmaku_viewer.lua  global_variables.lua
src/: CMakeLists.txt  dxlib_glue_code.cpp  dxlib_glue_code.h  game.cpp  game.h  main.cpp
